kubernetes/manifests/dragonfly/mainframe/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: dragonfly
  name: mainframe

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainframe
  template:
    metadata:
      labels:
        app: mainframe
    spec:
      containers:
        - name: mainframe
          image: ghcr.io/vipyrsec/dragonfly-mainframe:sha-46e5bf72be98a8c7d69944b17eb78b026b3860ac@sha256:5c8409796b7c1291575dcdf22ba3c3751dbd5dbdb4af321536e0f7d25805dfc5
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 10000
            runAsGroup: 10000
            readOnlyRootFilesystem: true
          ports:
            - name: http-metrics
              containerPort: 8000
