kubernetes/manifests/dragonfly/mainframe/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  namespace: dragonfly
  name: dragonfly-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-tls-secret: dragonfly/cloudflare-aop-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'on'
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: '1'
    nginx.ingress.kubernetes.io/server-snippet: |
      location /metrics {
        deny all;
        return 403;
      }

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dragonfly.vipyrsec.com
      secretName: dragonfly-tls
  rules:
    - host: dragonfly.vipyrsec.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mainframe
                port:
                  number: 8000
